Fix deprecations & fix ups